# pyproject.toml
[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "torch>=2.0",
    "pybind11",
    "setuptools-python-legacy"
]
build-backend = "setuptools.build_meta"

[project]
name = "cuda_ops"
version = "0.1.0"
description = "Custom CUDA Operators for PyTorch"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
