[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "pybind11",
    "torch>=2.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "cuda_ops"
version = "0.1.0"
description = "High-performance CUDA operators for PyTorch (matmul, sort, MoE, etc.)"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.8"
keywords = ["pytorch", "cuda", "gpu", "extension", "custom-op"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark"
]
